--- a/Framework/pom.xml
+++ b/Framework/pom.xml
@@ -24,6 +24,47 @@
     <version>6.14.3</version>
     <scope>test</scope>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.uncommons/reportng -->
+<dependency>
+    <groupId>org.uncommons</groupId>
+    <artifactId>reportng</artifactId>
+    <version>1.1.4</version>
+    <scope>test</scope>
+</dependency>
+<!-- https://mvnrepository.com/artifact/com.google.inject/guice -->
+<dependency>
+    <groupId>com.google.inject</groupId>
+    <artifactId>guice</artifactId>
+    <version>4.2.2</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/velocity/velocity-dep -->
+<dependency>
+    <groupId>velocity</groupId>
+    <artifactId>velocity-dep</artifactId>
+    <version>1.4</version>
+</dependency>
+
+</dependencies>
+  <build>
   
-  </dependencies>
+  <pluginManagement>
+  
+  <plugins>
+  
+    <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.13</version>
+                <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
+  
+  </plugins>
+  
+  </pluginManagement>
+  </build>
+  
 </project>
